@@ -2,13 +2,14 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1422 2010-09-23 10:17:27 mn Exp $
+# $Id: CHANGES,v 1.1423 2010-09-23 10:26:58 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
 # did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
 # --
 3.0.0 beta4 2010-09-??
+ - 2010-09-23 Fixed bug#5983 - Outlook inline image is displayed in attachment list.
  - 2010-09-23 Fixed bug#5849 - Headline / Company Name is hardcoded in the DTL of the customer interface.
  - 2010-09-23 Fixed bug#5988 - ActionRow in customer interface displays incorrectly
     when zoomed, in Firefox/Webkit browser
